service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stewart-echo-service
  namespace: stewart-eks-activity
spec:
  selector:
    app: echo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
