ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stewart-echo-app-ingress
  namespace: stewart-eks-activity
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "stewart-echoapp.sctp-sandbox.com" # Route53 Record
spec:
  ingressClassName: nginx
  rules:
  - host: "stewart-echoapp.sctp-sandbox.com" # Route53 Record
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stewart-echo-service
            port:
              number: 80
